# memphis-ml

./: .gitignore  Cargo.toml  ML-MASTER-PLAN.md  PRODUCTION-CHECKLIST.md  README.md  SPEC.md
.github/workflows/: ci.yml  release.yml
crates/ml-cli/: Cargo.toml
crates/ml-cli/src/: main.rs  repl.rs
crates/ml-core/: Cargo.toml
crates/ml-core/examples/: run.rs
crates/ml-core/examples/programs/: 01_hello_world.ml  01_smart_lights.ml  02_temp_monitor.ml  03_garage_door.ml  04_security_system.ml  05_irrigation.ml  06_weather_station.ml  07_heater_control.ml  08_lights_out_game.ml  09_fizzbuzz.ml  10_fibonacci.ml  11_power_monitor.ml  12_ventilation.ml  13_pool_control.ml  14_chicken_coop.ml  15_greenhouse.ml  16_door_lock.ml  17_energy_saver.ml  18_battery_backup.ml  19_rain_detector.ml  20_pet_feeder.ml
crates/ml-core/src/: ast.rs  error.rs  lexer.rs  lib.rs  machine.rs  parser.rs  typecheck.rs
crates/ml-hal/: Cargo.toml
crates/ml-hal/src/: lib.rs  mock.rs
crates/ml-hw-gpio/: Cargo.toml
crates/ml-hw-gpio/examples/: simple.rs
crates/ml-hw-gpio/src/: lib.rs  sysfs.rs
crates/ml-hw-http/: Cargo.toml
crates/ml-hw-http/src/: lib.rs
crates/ml-hw-mqtt/: Cargo.toml
crates/ml-hw-mqtt/src/: lib.rs
crates/ml-memphis/: Cargo.toml
crates/ml-memphis/src/: decisions.rs  journal.rs  lib.rs  runtime.rs  tracer.rs
crates/ml-p2p/: Cargo.toml
crates/ml-p2p/src/: error.rs  lib.rs  node.rs  protocol.rs
crates/ml-protocol/: Cargo.toml
crates/ml-protocol/src/: lib.rs  translator.rs
crates/ml-vm/: Cargo.toml
crates/ml-vm/benches/: bench.rs
crates/ml-vm/examples/: bench.rs
crates/ml-vm/src/: compiler.rs  error.rs  lib.rs  opcode.rs  vm.rs
crates/ml-vm/tests/: vm_tests.rs
