[workspace]
resolver = "2"
members = [
  "crates/ml-core",
  "crates/ml-hal",
  "crates/ml-hw-gpio",
  "crates/ml-hw-http",
  "crates/ml-memphis",
  "crates/ml-cli",
  "crates/ml-p2p",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["Memphis Team"]

[workspace.dependencies]
thiserror = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["rt", "rt-multi-thread", "fs", "net", "sync", "io-util", "macros"] }
reqwest = { version = "0.12", features = ["json", "rustls-tls"], default-features = false }
clap = { version = "4", features = ["derive"] }
anyhow = "1"
uuid = { version = "1", features = ["v4"] }
tracing = "0.1"
tracing-subscriber = "0.3"
chrono = { version = "0.4", features = ["serde"] }
sha2 = "0.10"

[profile.release]
opt-level = 3
lto = true
