[package]
name = "ml-cli"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "ml"
path = "src/main.rs"

[dependencies]
ml-core = { path = "../ml-core" }
ml-hal = { path = "../ml-hal" }
ml-memphis = { path = "../ml-memphis" }
clap = { version = "4", features = ["derive"] }
anyhow = "1"
serde_json = "1"
