[package]
name = "ml-hw-mqtt"
version = "0.1.0"
edition = "2021"

[dependencies]
ml-hal = { path = "../ml-hal" }
rumqttc = "0.24"
tokio = { workspace = true, features = ["rt-multi-thread", "sync", "time"] }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
log = "0.4"
