[package]
name = "ml-memphis"
version = "0.1.0"
edition = "2021"

[dependencies]
ml-core = { path = "../ml-core" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
thiserror = "2"
chrono = { version = "0.4", features = ["serde"] }
tokio = { version = "1", features = ["rt", "fs", "sync"] }
anyhow = "1"
uuid = { version = "1", features = ["v4", "serde"] }
