[package]
name = "ml-p2p"
version = "0.1.0"
edition = "2021"

[dependencies]
bytes = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["rt", "net", "sync", "io-util", "macros", "time"] }
thiserror = "2"
uuid = { version = "1", features = ["v4"] }
tracing = "0.1"

[dev-dependencies]
tokio-test = "0.4"
